--- a/index.html
+++ b/index.html
@@ -2,26 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="assets/img/icono_cuc.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio</title>
+    <link href="assets/css/estilos.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <header>
+      <nav>
         <ul>
           <li>Inicio</li>
           <li>Programas academicos</li>
           <li>Docentes</li>
           <li>Acerca de</li>
         </ul>
-
-        <h1>Sistema de matriculas</h1>
+      </nav>   
     </header>
     
     <main>
+      <div class="miJumbo">
+        <img src="assets/img/logo_cuc.png" alt="logo"  align="left"/>
+      <h1>Sistema de matriculas</h1>  
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque voluptas blanditiis deserunt consectetur libero debitis
         rem illum quos suscipit perspiciatis optio, expedita dolores quisquam vero magnam ¡ste rerum aceusantium maxime.
-
+      </div>
     </main>
 
   </body>
